# bmc

./: CMakeLists.txt  appveyor.yml  build_local.bat
include/bmc/braille/semantic_analysis/: value_disambiguation.hpp
lib/: lilypond.cpp  musicxml.cpp  score_def.hpp  value_disambiguation.cpp
test/: CMakeLists.txt
ui/qt/: CMakeLists.txt  app.cpp
